link to petpage exporter from Your Items

--- a/app/stylesheets/closet_hangers/_index.sass
+++ b/app/stylesheets/closet_hangers/_index.sass
@@ -74,6 +74,14 @@ body.closet_hangers-index
   #cancel-contact-link
     margin-left: 1em
 
+  #closet-hangers-extras
+    margin-bottom: 1em
+    text-align: center
+
+    a
+      +awesome-button
+      margin: 0 0.5em
+
   #closet-hangers
     clear: both
     text-align: center
