--- a/app/views/closet_hangers/petpage.html.haml
+++ b/app/views/closet_hangers/petpage.html.haml
@@ -1,4 +1,4 @@
-- title 'Export to Petpage'
+- title 'Export to petpage'
 - secondary_nav do
   = link_to 'Back to Your Items', user_closet_hangers_path(current_user), :class => 'button'
 
