--- a/app/views/closet_hangers/index.html.haml
+++ b/app/views/closet_hangers/index.html.haml
@@ -2,7 +2,6 @@
   - title 'Your Items'
   - add_body_class 'current-user'
   - secondary_nav do
-    = link_to "Import closet from Neopets", new_closet_page_path, :id => 'import-link'
     = form_tag items_path, :method => :get, :id => 'closet-hangers-items-search', 'data-current-user-id' => current_user.id do
       = text_field_tag :q, nil, :placeholder => "Find items to add"
       = submit_tag 'Search', :name => nil
@@ -66,6 +65,11 @@
     [mail]: mailto:#{contact_email}
     [suggestions]: #{feedback_url}
     [uft]: #{new_user_closet_list_path(@user, :closet_list => {:hangers_owned => true, :name => 'Up For Trade', :visibility => ClosetVisibility[:trading].id})}
+
+- unless public_perspective?
+  #closet-hangers-extras
+    = link_to "Import from Neopets closet", new_closet_page_path
+    = link_to "Export to Neopets petpage", petpage_user_closet_hangers_path(@user)
 
 #closet-hangers{:class => public_perspective? ? nil : 'current-user'}
   - [true, false].each do |owned|
