--- a/app/views/outfits/new.html.haml
+++ b/app/views/outfits/new.html.haml
@@ -29,15 +29,15 @@
 - cache :action_suffix => 'sections_and_description' do
   %ul#sections
     %li
-      %a{:href => "http://forum.openneo.net"}
-        = image_tag 'forum.png'
+      = link_to image_tag('your_items.png'), your_items_path
       %h3
-        %a{:href => "http://forum.openneo.net/"} Forum
+        = link_to 'Your Items', your_items_path
       %div
-        %h4 Join our community!
+        %h4 Track and trade!
         %p
-          Show off your designs, ask for advice, or play silly forum games
-          here.
+          Make lists of the items you own and want, and share them with the
+          world.
+
     %li
       %a{:href => items_path}
         = image_tag 'items.png'
