--- a/app/views/closet_hangers/index.html.haml
+++ b/app/views/closet_hangers/index.html.haml
@@ -2,6 +2,7 @@
   - title 'Your Items'
   - add_body_class 'current-user'
   - secondary_nav do
+    %span#toggle-help Need help?
     = form_tag items_path, :method => :get, :id => 'closet-hangers-items-search', 'data-current-user-id' => current_user.id do
       = text_field_tag :q, nil, :placeholder => "Find items to add"
       = submit_tag 'Search', :name => nil
@@ -31,40 +32,41 @@
         %span#cancel-contact-link cancel
 
 - unless public_perspective?
-  :markdown
-    **These are your items! You can track what items you want and own, and
-    share [this page](#{request.fullpath}) with the world**. Just look up an
-    item in the search form above to get started.
+  #closet-hangers-help{:class => closet_hangers_help_class}
+    :markdown
+      **These are your items! You can track what items you want and own, and
+      share [this page](#{request.fullpath}) with the world**. Just look up an
+      item in the search form above to get started.
 
-    **You can also sort your items into lists.**
-    [Building an Up For Trade list is a good place to start][uft]. You can
-    make lists for trade items with different market values, a private list of
-    what you need for that next outfit, or whatever you like. You can also
-    drag-and-drop items in and out of lists. It's pretty fun.
+      **You can also sort your items into lists.**
+      [Building an Up For Trade list is a good place to start][uft]. You can
+      make lists for trade items with different market values, a private list of
+      what you need for that next outfit, or whatever you like. You can also
+      drag-and-drop items in and out of lists. It's pretty fun.
 
-    **Your items also have privacy settings.**
-    Items can be **private**, so only you can see them. They can be **public**,
-    so you can share this page with friends. They can even be **trading**,
-    meaning that we'll mention on the item's [Infinite Closet][ic] page that
-    you own or want that item.
+      **Your items also have privacy settings.**
+      Items can be **private**, so only you can see them. They can be **public**,
+      so you can share this page with friends. They can even be **trading**,
+      meaning that we'll mention on the item's [Infinite Closet][ic] page that
+      you own or want that item.
 
-    **We try to make trading easy.** If there's some item you want, you can
-    pull up that item's [Infinite Closet][ic] page to see if anyone is offering
-    it, and see what *that* user wants
-    in exchange. It's all pretty spiffy. Also, if you plan to trade, your should
-    <span class="edit-contact-link">add your Neopets username</span> so that
-    when other users come here they know how to contact you.
+      **We try to make trading easy.** If there's some item you want, you can
+      pull up that item's [Infinite Closet][ic] page to see if anyone is offering
+      it, and see what *that* user wants
+      in exchange. It's all pretty spiffy. Also, if you plan to trade, your should
+      <span class="edit-contact-link">add your Neopets username</span> so that
+      when other users come here they know how to contact you.
 
-    **Have fun!** If you have any [neat ideas][suggestions] or [general praise and
-    bug reports][mail], we love to hear them. And, if you enjoy this feature,
-    [please consider donating to keep Dress to Impress running and improving][donate].
-    Thanks!
+      **Have fun!** If you have any [neat ideas][suggestions] or [general praise and
+      bug reports][mail], we love to hear them. And, if you enjoy this feature,
+      [please consider donating to keep Dress to Impress running and improving][donate].
+      Thanks!
 
-    [donate]: #{donate_path}
-    [ic]: #{items_path}
-    [mail]: mailto:#{contact_email}
-    [suggestions]: #{feedback_url}
-    [uft]: #{new_user_closet_list_path(@user, :closet_list => {:hangers_owned => true, :name => 'Up For Trade', :visibility => ClosetVisibility[:trading].id})}
+      [donate]: #{donate_path}
+      [ic]: #{items_path}
+      [mail]: mailto:#{contact_email}
+      [suggestions]: #{feedback_url}
+      [uft]: #{new_user_closet_list_path(@user, :closet_list => {:hangers_owned => true, :name => 'Up For Trade', :visibility => ClosetVisibility[:trading].id})}
 
 - unless public_perspective?
   #closet-hangers-extras
